🤖 Generated Codex project
Generated by DesignArena Agent - AI-powered code generation system
Repository: agentic-6f7bbe3c
Generated at: 2025-12-29 13:44:03 UTC

This project was automatically generated by AI and includes:
- Complete project structure
- Comprehensive .gitignore (900+ patterns)
- Ready for development and deployment

🔗 Powered by DesignArena - https://github.com/Design-Arena-Gens

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ lerna-debug.log*
 pnpm-debug.log*
 
 # Package manager lock files
-package-lock.json
 yarn.lock
 pnpm-lock.yaml
 .pnpm-store/
@@ -881,6 +880,12 @@ venv.bak/
 # Data files
 *.csv
 *.json
+
+# Allow essential config JSON artifacts
+!package.json
+!package-lock.json
+!tsconfig.json
+!.eslintrc.json
 *.xml
 *.parquet
 data/
